# r4intellij

./: .gitignore  .travis.yml  Changes.md  LICENSE  LICENSE_R  R4Intellij.pptx  README.md  build.gradle  build.xml  gradle.properties  r.txt
docs/: README.md  _config.yml  devel_notes.md  editor_support.md  faq.md  misc.md  openapi_notes.md
gramgen/: BnfAdaptedGrammar.bnf  R.bnf  R.output  R.tab.c  R.y  RGrammar.bnf  RGrammar.g  RGrammar_simplepeg.bnf  gram.output  header.txt  original_r_grammar.y  parser_notes.md
grammars/: r.bnf
lib/: idea-flex.skeleton
misc/: boxcox.R  calc.flex  complex_script.R  create_test_r_library.sh  devel_notes.md  evalR-applescript.scpt  evalR-applescript_terminal.scpt  flex.sh  gwiki.txt  index_cleanup.sh  installation_index.R  normality tests.R  openapi_notes.md  package_unloading.r  parser-example.R  parser-parsetree-examples.txt  parser-playground.R  r_graphics_devices.md  run.md  simpler.flex  test.sh  tests.md  textmate4r.txt  todo.md
misc/graphics_device_library/: CMakeLists.txt  Common.h  Evaluator.cpp  Evaluator.h  HowTo.md  Interface.cpp  Interface.h  MasterDevice.cpp  MasterDevice.h  ScopeProtector.cpp  ScopeProtector.h  SlaveDevice.cpp  SlaveDevice.h
misc/graphics_device_library/cmake/modules/: FindR.cmake
r-helpers/: install_tidyverse.r  libtherplugin_device64.dylib  package_summaries.r  package_version_deps_map.r  package_versions.r  r-generator.r  r-help-without-package.r  r-help.r  skeletonize_package.R  skeletonize_package_by_method.R
r-helpers/r-skeletons/: base.r
resources/: sample.R
test/: log4j.properties
(+755 files in other folders)
